fixed the scrollbars and jupyter code cells

--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -42,8 +42,8 @@ $dt-darkish-orange: rgb(231, 153, 122);
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: Menlo, Monaco, Consolas, "Lucida Console", Roboto, Ubuntu, monospace;
-    border-radius: 5px;
-    font-size: 105%;
+    border-radius: 10px;
+    font-size: 100%;
 }
 .output_area pre, .output_area div {
     margin-bottom:1rem !important;
